...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="fill" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LGA-zu-a8t">
                                <rect key="frame" x="30" y="649" width="354" height="91.333333333333371"/>
                                <color key="backgroundColor" red="0.95294117649999999" green="0.90588235289999997" blue="0.52156862749999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" label="SearchVideos"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="91.333333333333371" id="LRf-DO-ADe"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HiraMinProN-W6" family="Hiragino Mincho ProN" pointSize="21"/>
                                <state key="normal" title="Search Videos">
                                    <color key="titleColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="EiI-f7-NgT" kind="show" id="7T4-Xi-Lfy"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="fill" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MsM-4K-dDU">
                                <rect key="frame" x="30" y="449" width="354" height="91.333333333333371"/>
                                <color key="backgroundColor" red="0.63921568630000003" green="0.79215686269999996" blue="0.88235294119999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" label="SearchRecipes"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="91.333333333333314" id="R8X-Og-aL6"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HiraMinProN-W6" family="Hiragino Mincho ProN" pointSize="21"/>
                                <state key="normal" title="Search Recipes">
                                    <color key="titleColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="BYZ-38-t0r" kind="show" id="Rn6-nc-q5X"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="fill" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Izp-Cb-6Sp">
                                <rect key="frame" x="30" y="549" width="354" height="91.333333333333371"/>
                                <color key="backgroundColor" red="0.71764705880000002" green="0.68235294120000001" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" label="SearchByIngredients"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="91.333333333333371" id="78G-NE-OYH"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HiraMinProN-W6" family="Hiragino Mincho ProN" pointSize="21"/>
                                <state key="normal" title="Search by Ingredients">
                                    <color key="titleColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="Mgl-ar-iQV" kind="show" id="gTw-0k-Aij"/>
                                </connections>
                            </button>
...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="hamburger" textAlignment="natural" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="vHc-1O-xss">
                                <rect key="frame" x="48" y="315" width="218" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="searchTextField">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <action selector="textFieldChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="QDc-Bm-4UT"/>
                                </connections>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y43-F9-uId">
                                <rect key="frame" x="338" y="315" width="30" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="searchButton">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="width" constant="30" id="GbD-YW-qUO"/>
                                </constraints>
                                <state key="normal" title="go!"/>
...
